--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
         "autoprefixer": "^10.4.14",
         "browser-sync": "^2.29.1",
         "browser-sync-webpack-plugin": "^2.3.0",
+        "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.7.3",
-        "imagemin-mozjpeg": "^6.0.0",
-        "imagemin-pngquant": "^9.0.0",
+        "imagemin-mozjpeg": "^9.0.0",
+        "imagemin-pngquant": "^9.0.2",
+        "imagemin-webpack-plugin": "^2.4.2",
         "mini-css-extract-plugin": "^2.7.5",
         "postcss": "^8.4.21",
         "postcss-loader": "^7.1.0",
